Make torch.conj a composite function
ghstack-source-id: 960922cb6a5640247f2239b00e31b7008f205ed9
Pull Request resolved: https://github.com/pytorch/pytorch/pull/43270

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -288,6 +288,10 @@
 
 - func: conj.out(Tensor self, *, Tensor(a!) out) -> Tensor(a!)
 
+- func: fast_conj(Tensor self) -> Tensor
+  use_c10_dispatcher: full
+  variants: function, method
+
 - func: acos(Tensor self) -> Tensor
   use_c10_dispatcher: full
   variants: function, method
