refactor manual function definitions
this makes them available in forward if needed

ghstack-source-id: e18223155e327e08bb676265740c8e45e6bcc6af
Pull Request resolved: https://github.com/pytorch/pytorch/pull/43711

--- a/caffe2/CMakeLists.txt
+++ b/caffe2/CMakeLists.txt
@@ -388,6 +388,8 @@ if(NOT INTERN_BUILD_MOBILE OR NOT BUILD_CAFFE2_MOBILE)
     "${TOOLS_PATH}/autograd/templates/TraceType.cpp"
     "${TOOLS_PATH}/autograd/templates/Functions.h"
     "${TOOLS_PATH}/autograd/templates/Functions.cpp"
+    "${TOOLS_PATH}/autograd/templates/ManualFunctions.h"
+    "${TOOLS_PATH}/autograd/templates/ManualFunctions.cpp"
     "${TOOLS_PATH}/autograd/templates/python_functions.h"
     "${TOOLS_PATH}/autograd/templates/python_functions.cpp"
     "${TOOLS_PATH}/autograd/templates/python_variable_methods.cpp"
